New OpenAPI graph endpoint
